Closed Bug 1457400 Opened 6 years ago Closed 6 years ago

Misspelled "GLContextProviderELG" in comment

Categories

(Core :: Graphics, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox61 --- wontfix
firefox62 --- fixed

People

(Reporter: yuki, Assigned: yuki)

Details

Attachments

(1 file, 1 obsolete file)

I've found misspelled "GLContextProviderELG" in sources. They should be spelled as "GLContextProviderEGL".
https://dxr.mozilla.org/mozilla-central/source/gfx/thebes/gfxEnv.h#89
https://dxr.mozilla.org/mozilla-central/search?q=GLContextProviderELG
https://dxr.mozilla.org/mozilla-central/search?q=GLContextProviderEGL

Steps to reproduce: None.
Expected result: There is no typo.
Actual result: There is misspelled "GLContextProviderELG".
Assignee: nobody → yuki
Keywords: checkin-needed
Please attach a patch which includes necessary commit information needed for checkin (name/email/descriptive commit message) and re-request after doing so.
Flags: needinfo?(yuki)
Keywords: checkin-needed
"r+" state is carried over from the previous patch.
Attachment #8971504 - Attachment is obsolete: true
Flags: needinfo?(yuki)
Attachment #8974620 - Flags: review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/dc707cbe6702
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: