Bug 1457400 - Fix typo "ELG" to "EGL", r=milan

There is misspelled "GLContextProviderELG".